TASK #1536: Remove _target=blank forn sign up link

--- a/contacts.html
+++ b/contacts.html
@@ -42,7 +42,7 @@
                     <div class="j-header__right">
                         <nav class="j-menu">
                             <a class="j-menu__link" href="#" style="display: none">Log in</a>
-                            <a class="j-menu__link j-menu__link--blue" href="https://app.cubegg.com/" target="_blank">Sign up free</a>
+                            <a class="j-menu__link j-menu__link--blue" href="https://app.cubegg.com/">Sign up free</a>
                         </nav>
                     </div>
                 </div>
