--- a/contacts.html
+++ b/contacts.html
@@ -10,7 +10,6 @@
         <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body class="j-body j-body__fixed">
-
         <!-- modile - start -->
         <div class="j-container j-container--height-auto">
             <div class="j-mobile">
@@ -78,9 +77,20 @@
         <!-- j-main - end -->
 
 
+        <!-- Google Analytics -->
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-67411273-1', 'auto');
+            ga('send', 'pageview');
+        </script>
+        <!-- End Google Analytics -->
+
         <!-- scripts - start-->
         <script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>
         <script type="text/javascript" src="js/scripts.js"></script>
-
     </body>
 </html>
