--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
         <link href="css/style.css" rel="stylesheet" type="text/css">
     </head>
     <body class="j-body j-body__index">
-
-
         <!-- j-full__1 - start-->
         <div class="j-full j-full__1">
             <div class="j-container">
@@ -445,6 +443,18 @@
         <!-- footer - end-->
 
 
+        <!-- Google Analytics -->
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-67411273-1', 'auto');
+            ga('send', 'pageview');
+        </script>
+        <!-- End Google Analytics -->
+
         <!-- scripts - start-->
         <script type="text/javascript" src="js/jquery-3.0.0.min.js"></script>
         <script type="text/javascript" src="js/jquery.scrollify.min.js"></script>
@@ -489,7 +499,5 @@
             });
         </script>
         <!-- scripts - end-->
-
-
     </body>
 </html>
